<resources>
    <string name="app_name">Track me</string>
    <string name="search_hint">Search</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_not_found">User Not found</string>
    <string name="user_disabled">User Disabled</string>
    <string name="user_token_expired">User token expired</string>
    <string name="invalid_user_token">Invalid user token</string>
    <string name="something_went_wrong_auth">An unexpected authentication error occurred. Please try again later or contact support.</string>
    <string name="add_your_tasks_and_to_dos_lists_and_organize_your_tasks">Add your tasks and to dos lists and organize your tasks</string>
    <string name="no_lists_yet">No lists yet</string>
    <string name="save">Save</string>
    <string name="new_task">New task</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="enter_your_credentials_to_access_your_account_and_unlock_a_world_of_personalized_experiences">Enter your credentials to access your account and unlock a world of personalized experiences.</string>
    <string name="or">OR</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="forget_password">Forget Password?</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="undo">Undo</string>
    <string name="task_deleted">Task Deleted</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="invalid_email_address_please_enter_a_valid_email">Invalid email address. Please enter a valid email.</string>
    <string name="invalid_password_length">Password must be at least 6 characters long.</string>
    <string name="password_mismatch">Passwords do not match. Please make sure they are identical.</string>
    <string name="account_already_registered">An account with this email address already exists. Please sign in or use a different email address.</string>
    <string name="email_address_is_required_please_enter_a_valid_email">Email address is required. Please enter a valid email.</string>
    <string name="do_you_have_account_sign_in">Do you have account? Sign In</string>
    <string name="forget_password_header">Forget Password</string>
    <string name="incorrect_password">Incorrect password. Please double-check your password and try again.</string>
    <string name="email_is_not_registered">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="reset_email_sent">Reset Email Sent</string>
    <string name="an_email_has_been_sent_to_you_for_password_reset_please_check_your_inbox">If registered, you\'ll receive a password reset email. Check your inbox for instructions.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again.</string>
    <string name="retrieve_access_to_your_account_enter_your_credentials_to_reset_your_password_and_unlock_personalized_experiences">Retrieve access to your account. Enter your credentials to reset your password and unlock personalized experiences.</string>
    <string name="create_your_account_now_to_unlock_personalized_experiences_set_up_your_credentials_and_join_a_world_of_possibilities">Create your account now to unlock personalized experiences. Set up your credentials and join a world of possibilities.</string>
    <string name="skip">SKIP</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="manage_your_tasks">Manage your tasks</string>
    <string name="you_can_easily_manage_all_of_your_daily_tasks">You can easily manage all of your daily tasks.</string>
    <string name="create_daily_routine">Create daily routine</string>
    <string name="you_can_create_your_personalized_routine_to_stay_productive">You can create your personalized routine to stay productive</string>
    <string name="organize_your_tasks">Organize your tasks</string>
    <string name="you_can_organize_your_daily_tasks_by_adding_your_tasks_into_separate_categories">You can organize your daily tasks by adding your tasks into separate categories</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_to_track_me">Welcome to Track me</string>
    <string name="please_login_to_your_account_or_create_new_account_to_continue">Please login to your account or create new account to continue</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="focus">Focus</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="completed">Completed</string>
</resources>