<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/grp_empty_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:startIconDrawable="@drawable/baseline_search_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="@string/today"
            app:icon="@drawable/baseline_expand_more_24"
            app:iconGravity="end"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_today"
            tools:itemCount="3"
            tools:listitem="@layout/item_rv_list" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="@string/completed"
            app:icon="@drawable/baseline_expand_more_24"
            app:iconGravity="end"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/rv_tasks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_completed_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_completed"
            tools:itemCount="3"
            tools:listitem="@layout/item_rv_list" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
